<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".presentation.activities.MainActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_text"
        android:textSize="18dp"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/edit_name"
        tools:visibility="visible" />


    <LinearLayout
        android:id="@+id/ll_mack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="9999999999"
            android:inputType="phone"
            android:typeface="monospace"
            mask:allowed_chars="1234567890"
            mask:mask="(###)###-##-##"
            tools:visibility="visible" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_authorization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_get_sms"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/edit_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_sms"
        android:inputType="number"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/text_error_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_sms"
        android:textColor="@color/red"
        android:textSize="14dp"
        android:visibility="gone"
        tools:visibility="gone" />

    <Button
        android:id="@+id/btn_check_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_check_sms"
        android:visibility="gone"
        tools:visibility="gone" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_back"
        android:visibility="gone"
        tools:visibility="gone" />

</LinearLayout>